--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
       .app > .footer .nav-btn.active .active-bar {
         visibility: visible;
       }
+      /* Home */
       .home {
         width: 100%;
       }
@@ -478,6 +479,17 @@
           color: rgba(255, 255, 255, 0.7);
         }
       }
+
+      /* Search */
+      .search {
+        width: 100%;
+        height: 100%;
+        background-color: var(--color-background);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
     </style>
   </head>
   <body>
@@ -538,15 +550,12 @@
               </div>
             </div>
           </div>
+          <div class="fragment search"></div>
           <div class="fragment">
-            <span>Search</span>
-            <a href="admin/">Admin...</a>
+            <span></span>
           </div>
           <div class="fragment">
-            <span>Updates</span>
-          </div>
-          <div class="fragment">
-            <span>Profile</span>
+            <span></span>
           </div>
         </div>
       </div>
