--- a/index.html
+++ b/index.html
@@ -490,6 +490,20 @@
         left: 0;
         z-index: 1;
       }
+      /* Updates */
+      .updates {
+        width: 100%;
+        height: 100%;
+        background-color: var(--color-background);
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 1;
+      }
+      /* Profile */
+      .profile {
+        width: 100%;
+      }
     </style>
   </head>
   <body>
@@ -551,12 +565,8 @@
             </div>
           </div>
           <div class="fragment search"></div>
-          <div class="fragment">
-            <span></span>
-          </div>
-          <div class="fragment">
-            <span></span>
-          </div>
+          <div class="fragment updates"></div>
+          <div class="fragment profile"></div>
         </div>
       </div>
       <div class="footer">
@@ -904,6 +914,19 @@
           if (!btn.classList.contains("active")) {
             const fragments = ["home", "search", "updates", "profile"];
             if (navBtn[0].classList.contains("active")) {
+              if ([3].includes(index)) {
+                const user = (() => {
+                  try {
+                    return JSON.parse(localStorage.getItem("application.user")) || {};
+                  } catch {
+                    return {};
+                  }
+                })();
+                if (!user.auth?.isLoggedIn) {
+                  location.href = "auth/";
+                  return;
+                }
+              }
               history.pushState({}, "", `#/${fragments[index]}`);
             } else {
               switch (index) {
